# widelands-odroid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_debug.sh
libext/: CMakeLists.txt  build_xboxdrv.sh  sdl12-compat.cmake
src/: CMakeLists.txt  languages.h  wlapplication.cc
src/graphic/: SDL_mng.cc  graphic.cc  graphic.h
src/io/filesystem/: disk_filesystem.cc
src/ui_basic/: panel.cc
src/wui/: interactive_base.cc
